# k9-overwatch

./: .env.example  .gitignore  .replit  README.md  pyproject.toml  replit.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: PRODUCT_ROADMAP.md  api-analysis-24petconnect.md  api-analysis-indylostpetalert.md  api-analysis-lostmydoggie.md  api-analysis-pawboost.md  api-analysis-petfbi.md  unified-data-schema.md  web-app-architecture-plan.md
scripts/: geocode_batch.py  scrape_one.py
src/k9overwatch/: __init__.py  notifications.py
src/k9overwatch/db/: __init__.py  connection.py  models.py  repository.py
src/k9overwatch/geocoding/: __init__.py  geocoder.py
src/k9overwatch/geocoding/providers/: __init__.py  google.py  nominatim.py
src/k9overwatch/matching/: __init__.py  breed_normalizer.py  deduplicator.py  lost_found_matcher.py  signals.py
src/k9overwatch/models/: __init__.py  enums.py  pet_record.py
src/k9overwatch/normalizers/: __init__.py  indy_lost_pet_alert.py  lostmydoggie.py  pawboost.py  petconnect24.py  petfbi.py
src/k9overwatch/scheduler/: __init__.py  jobs.py  runner.py
src/k9overwatch/scrapers/: __init__.py  base.py
src/k9overwatch/scrapers/browser/: __init__.py  base_browser.py  lostmydoggie.py  (+2 more)
src/k9overwatch/utils/: http_client.py  logging_config.py  text.py
src/k9overwatch/web/: __init__.py  auth.py  dependencies.py  main.py  templates_config.py
tests/: conftest.py  test_accounts_reports.py  test_buckets.py  test_geocoding.py  test_integration.py  test_map_api.py  test_matching.py  test_normalizers.py  test_rematch.py
(+30 files in other folders)
